<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="battery_recyclers">Battery Recycling</string>
    <string name="drink_fountains">Drinking Fountains</string>
    <string name="free_wi_fi">Free WiFi</string>
    <string name="heritage_sites">Heritage Sites</string>
    <string name="bike_tracks">MTB Tracks</string>
    <string name="public_cons">Public Conveniences</string>
    <string name="public_parks">Public Parks</string>
    <string name="urban_play">Urban Play</string>
    <string name="walks_intro_1">Use the menu at top left for many city walks/routes,</string>
    <string name="walks_intro_2">as well as the more adventurous hiking tracks/trails</string>
    <string name="walks_city">walks/routes</string>
    <string name="walks_other">tracks/trails</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_tracks_safety">Tracks and safety</string>
    <string name="navigation_check_status">Check track status</string>
    <string name="home_screen">Community/Home</string>
    <string name="browse_info">Browse walks Info</string>
    <string name="browse_maps">Browse walks Map</string>
    <string name="entire_list">List/search all Walks</string>
    <string name="area_place_list">List by Area &#187; Place &#187;</string>
    <string name="multi_day">Multi day Walks</string>
    <string name="search_by">Search by Feature</string>
    <string
        tools:ignore="PluralsCandidate"
        name="favourites">Your favourites (%d)</string>
    <string name="app_settings">App Settings</string>
    <string name="icons_legend">Icons Legend</string>
    <string name="app_name">Discover Christchurch</string>
    <string name="areas_title">Discover by Area</string>
    <string name="app_title">Discover %s</string>
    <string name="battery_recyclers_activity_title">Recycling Locations</string>
    <string name="ch_ch_360_title">ChCh 360 Trail</string>
    <string name="conveniences_activity_title">Public Toilet Locations</string>
    <string name="dog_parks_title">Dog Exercise Areas</string>
    <string name="dog_links_title">Dog Friendly Routes</string>
    <string name="facilities_fragment_title">Facilities</string>
    <string name="facilities_activity_title_single">All %s Locations</string>
    <string name="facilities_activity_title_multi">All Facility Locations</string>
    <string name="fountains_activity_title">Drink Water Locations</string>
    <string name="free_wi_fi_activity_title">Free WiFi Locations</string>
    <string name="fruit_fragment_title">/ Forage Local Fruit</string>
    <plurals name="fruit_activity_title_single">
        <item quantity="one">%s Tree</item>
        <item quantity="other">%s Trees</item>
    </plurals>
    <string name="fruit_activity_title_multi">All Fruit Trees</string>
    <string name="heritage_sites_activity_title_single">All %s Sites</string>
    <string name="heritage_sites_activity_title_filter">Selected Heritage Sites</string>
    <string name="heritage_sites_activity_title_multi">All Heritage Sites</string>
    <string name="list_fragment_title">all Tracks/Routes</string>
    <string name="street_art_fragment_title">Local Street Art</string>
    <string name="street_art_activity_title">Street Art Locations</string>
    <string name="urban_play_activity_title">Urban Play Locations</string>
    <string name="adjacent_subtitle">Longer (adjacent) Trails/Walks</string>
    <string
        tools:ignore="PluralsCandidate"
        name="areas_subtitle">%1$d Areas &#187; %2$d Places &#187; %3$d Routes</string>
    <string
        tools:ignore="PluralsCandidate"
        name="battery_recyclers_fragment_subtitle">%d Locations (long press: Map)</string>
    <string
        tools:ignore="PluralsCandidate"
        name="bike_tracks_fragment_subtitle">%d Bike Tracks (long press: Map)</string>
    <string name="bike_tracks_activity_subtitle">All Tracks</string>
    <string name="bike_details_subtitle">Bike/MTB Tracks</string>
    <string name="bike_info_subtitle">Bike Track Info</string>
    <string
        tools:ignore="PluralsCandidate"
        name="ch_ch_360_subtitle">%d Trail Legs (long press: Map)</string>
    <string name="common_map_subtitle">Google Map: %s</string>
    <string name="community_fragment_subtitle">Long press badged item for Info</string>
    <string name="community_activity_subtitle">Google Map: use My Location for nearest</string>
    <string
        tools:ignore="PluralsCandidate"
        name="conveniences_fragment_subtitle">%1$d/%2$d Toilets (long press: Map)</string>
    <string name="coastal_pathway_subtitle">Coastal Pathway</string>
    <string name="crater_rim_subtitle">Crater Rim Walkways</string>
    <string name="details_bike_track_subtitle">Bike Track Info (%1$d/%2$d)</string>
    <string name="details_basic_subtitle">Basic Track/Route (%1$d/%2$d)</string>
    <string name="details_ch_ch_360_subtitle">Trail Leg Info (%1$d/%2$d)</string>
    <string name="details_extended_subtitle">Extended Track/Route (%1$d/%2$d)</string>
    <string name="details_shared_subtitle">Shared Track/Route (%1$d/%2$d)</string>
    <string name="details_street_art_subtitle">Street Art Info (%1$d/%2$d)</string>
    <string
        tools:ignore="PluralsCandidate"
        name="dogs_fragment_subtitle">%1$d/%2$d
        Environs (long press: Map)</string>
    <string
        tools:ignore="PluralsCandidate"
        name="dog_details_subtitle">Dog Park (%1$d/%2$d)</string>
    <string
        tools:ignore="PluralsCandidate"
        name="dog_exercise_subtitle">Dog Exercise Area (%1$d/%2$d)</string>
    <plurals name="dogs_map_subtitle">
        <item quantity="one">Google Map: %1$d/%2$d Environment</item>
        <item quantity="other">Google Map: %1$d/%2$d Environments</item>
    </plurals>
    <string
        tools:ignore="PluralsCandidate"
        name="fountains_fragment_subtitle">%1$d/%2$d fountains (long press: Map)</string>
    <string name="free_wi_fi_fragment_subtitle">Find free WiFi around Christchurch</string>
    <string
        tools:ignore="PluralsCandidate"
        name="fruit_trees_fragment_subtitle">%1$d/%2$d Types (long press: Map)</string>
    <plurals name="fruit_trees_activity_subtitle">
        <item quantity="one">Google Map: Tree Location</item>
        <item quantity="other">Google Map: Tree Locations</item>
    </plurals>
    <string
        tools:ignore="PluralsCandidate"
        name="generic_fragment_subtitle">%1$d/%2$d (long press: Map)</string>
    <string
        tools:ignore="PluralsCandidate"
        name="heritage_sites_fragment_subtitle">%1$d/%2$d Sites (long press: Map)</string>
    <string name="info_basic_subtitle">Linked: Basic Track/Route</string>
    <string name="info_extended_subtitle">Linked: Extended Track/Route</string>
    <string name="info_shared_subtitle">Linked: Shared Track/Route</string>
    <string name="faves_subtitle">Favourites: unselect to Remove</string>
    <string name="head_to_head_subtitle">Head to Head Walkway</string>
    <plurals name="parks_map_subtitle">
        <item quantity="one">Google Map: All Public Parks</item>
        <item quantity="other">Google Map: Selected Parks</item>
    </plurals>
    <string
        tools:ignore="PluralsCandidate"
        name="places_subtitle">%1$d Places &#187; %2$d Tracks/Routes</string>
    <string name="results_subtitle">%1$s (%2$d)</string>
    <plurals name="routes_linked_subtitle">
        <item quantity="one">%d linked Route (long press: Map)</item>
        <item quantity="other">%d linked Routes (long press: Map)</item>
    </plurals>
    <plurals name="routes_subtitle">
        <item quantity="one">%d Route (long press: Map)</item>
        <item quantity="other">%d Routes (long press: Map)</item>
    </plurals>
    <string
        tools:ignore="PluralsCandidate"
        name="street_art_fragment_subtitle">%1$d/%2$d Items (long press: Map)</string>
    <string name="street_info_subtitle">Street Art Info</string>
    <string name="street_view_ch_ch_360_subtitle">Access point: %s</string>
    <string name="street_view_address_subtitle">Address: %s</string>
    <string name="street_view_start_point_subtitle">Start point: %s</string>
    <string name="street_view_waypoint_subtitle">Waypoint: %s</string>
    <string name="urban_play_subtitle">Must do fun in Central City</string>
    <string name="waypoints_all_subtitle">Google Map: All Start Points</string>
    <string name="waypoints_basic_subtitle">Google Map: Basic Track/Route</string>
    <string name="waypoints_extended_subtitle">Google Map: Extended Track/Route</string>
    <string name="waypoints_ch_ch_361_subtitle">Google Map: Leg Access Points</string>
    <string name="waypoints_ch_ch_362_subtitle">Google Map: ChCh 360 Overview</string>
    <string name="waypoints_coastal_pathway_subtitle">Google Map: All Coastal Pathways</string>
    <string name="waypoints_crater_rim_subtitle">Google Map: All Crater Rim Tracks</string>
    <string name="waypoints_head_to_head_subtitle">Google Map: All Head to Head Tracks</string>
    <string name="waypoints_shared_subtitle">Google Map: Shared Track/Route</string>
    <string name="waypoints_undefined_subtitle">Google Map: Undefined</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="google_descr">Powered by Google</string>
    <string name="flip_back_descr">Flip back</string>
    <string name="area_descr">Area icon</string>
    <string name="place_descr">Place icon</string>
    <string name="route_descr">Route icon</string>
    <string name="battery_recycler_descr">Battery recycle icon</string>
    <string name="bike_track_descr">Track gradient icon</string>
    <string name="bike_grade_descr">Track difficulty icon</string>
    <string name="bike_info_descr">Show more Bike Track info</string>
    <string name="fountain_bottle_descr">Drink vessel icon</string>
    <string name="fountain_dogs_descr">Dog friendly icon</string>
    <string name="fountain_toilet_descr">Public toilet icon</string>
    <string name="menu_details">View track/route Info</string>
    <string name="menu_map">View track/route Map</string>
    <string name="menu_search">Search by Name</string>
    <string name="menu_show_all">Zoom to fit (all Markers)</string>
    <string name="menu_show_location">Show Current Location</string>
                <string name="menu_name">Sort by Name</string>
    <string name="menu_accessibility">Accessibility</string>
          <string name="menu_dogs_ok">Dogs Okay</string>
             <string name="menu_shared">Shared Use</string>
        <string name="menu_transport">Public Transport</string>
                 <string name="menu_time">Time</string>
          <string name="menu_distance">Distance</string>
          <string name="menu_sort_asc">Sort Ascending</string>
          <string name="menu_grade">Grade</string>
          <string name="menu_gradient">Gradient</string>
         <string name="menu_length">Length</string>
    <string name="menu_hide_polygons">Hide optional Polygons</string>
      <string name="menu_show">Show all Polylines</string>
    <string name="menu_layers">Choose Map Type</string>
    <string name="menu_show_zoom">Show Optional Buttons</string>
    <string name="home_button">Home</string>
    <string name="areas_button">Areas</string>
    <string name="places_button">Places</string>
    <string name="routes_button">Routes</string>
    <string name="filter_by_type_select_all">Select all types</string>
    <string name="db_applied_to_all_extra">Selections stored in database for
        future use. Applied to both list &amp; map &#8230; some locations
        have more than one feature, so will still show even if not selected</string>
    <string name="fountain_bottles">Bottles</string>
    <string name="fountain_dogs">Dogs</string>
    <string name="fountain_toilet">Toilet</string>
</resources>