<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_name"
            android:title="@string/menu_name"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_grade"
            android:title="@string/menu_grade"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_gradient"
            android:title="@string/menu_gradient"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_length"
            android:title="@string/menu_length"
            app:showAsAction="never" />
        <item
            android:id="@+id/menu_shared"
            android:title="@string/menu_shared"
            app:showAsAction="never" />
    </group>
    <!-- An id is required to show a divider -->
    <group android:id="@+id/menu_bottom">
        <!-- showAsAction set programmatically, IF landscape -->
        <item
            android:id="@+id/menu_sort_order"
            android:checkable="true"
            android:title="@string/menu_sort_asc"
            app:showAsAction="never"
            tools:icon="@drawable/ic_baseline_sort_white_24">
        </item>
    </group>

</menu>
