<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Visibility for details, polyline, show/hide & search set in RoutesBaseActivity -->
    <item
        android:id="@+id/menu_details"
        android:icon="@drawable/ic_outline_description_white_24"
        android:title="@string/menu_details"
        android:visible="false"
        app:showAsAction="always" /><!--
        android:visible="false" -->

    <item
        android:id="@+id/menu_map"
        android:icon="@drawable/ic_baseline_route_white_24"
        android:title="@string/menu_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_show_location"
        android:checkable="true"
        android:enabled="false"
        android:title="@string/menu_show_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_show_all"
        android:enabled="false"
        android:icon="@drawable/ic_baseline_zoom_out_map_white_24"
        android:title="@string/menu_show_all"
        app:showAsAction="ifRoom" /><!-- -->

    <item
        android:id="@+id/menu_show_hide"
        android:title="@string/menu_show"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true" />

    <item
        android:id="@+id/menu_search"
        android:title="@string/menu_search"
        android:visible="false"
        app:showAsAction="never"
        tools:visible="true" />

</menu>
