<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="fountainsFragment"
            type="com.michaelrmossman.kotlin.discoverchristchurch.fragments.FountainsFragment" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/common_dialog_horizontal_padding"
        android:paddingEnd="@dimen/common_dialog_horizontal_padding"
        android:fillViewport="true"
        tools:showIn="@layout/fragment_fountains">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fountains_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/fountains_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:barrierDirection="end"
                app:constraint_referenced_ids="fountain_image_1, fountain_image_2" />

            <CheckBox
                android:id="@+id/fountains_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/list_item_margin_medium"
                android:onCheckedChanged="@{ () -> fountainsFragment.toggleSelectAll() }"
                android:text="@string/filter_by_type_select_all"
                style="@style/Theme.DiscoverChristchurch.CheckBox"
                app:layout_constraintStart_toEndOf="@id/fountains_barrier"
                app:layout_constraintTop_toTopOf="parent" />

            <!-- Actual categories -->

            <ImageView
                android:id="@+id/fountain_image_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/list_item_margin_large"
                android:layout_marginStart="@dimen/list_item_margin_large"
                android:layout_marginTop="@dimen/list_item_margin_large"
                android:contentDescription="@string/fountain_bottle_descr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fountains_select_all"
                app:srcCompat="@drawable/ic_baseline_water_drop_black_24" />

            <CheckBox
                android:id="@+id/fountain_select_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fountain_bottles"
                style="@style/Theme.DiscoverChristchurch.CheckBox"
                app:layout_constraintBottom_toBottomOf="@id/fountain_image_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fountains_barrier"
                app:layout_constraintTop_toTopOf="@id/fountain_image_1" />

            <ImageView
                android:id="@+id/fountain_image_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/list_item_margin_large"
                android:layout_marginStart="@dimen/list_item_margin_large"
                android:layout_marginTop="@dimen/common_dialog_vertical_margin"
                android:contentDescription="@string/fountain_dogs_descr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fountain_image_1"
                app:srcCompat="@drawable/ic_baseline_pets_black_24" />

            <CheckBox
                android:id="@+id/fountain_select_2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fountain_dogs"
                style="@style/Theme.DiscoverChristchurch.CheckBox"
                app:layout_constraintBottom_toBottomOf="@id/fountain_image_2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fountains_barrier"
                app:layout_constraintTop_toTopOf="@id/fountain_image_2" />

            <ImageView
                android:id="@+id/fountain_image_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/list_item_margin_large"
                android:layout_marginStart="@dimen/list_item_margin_large"
                android:layout_marginTop="@dimen/common_dialog_vertical_margin"
                android:contentDescription="@string/fountain_toilet_descr"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/fountain_image_2"
                app:srcCompat="@drawable/ic_baseline_wc_black_24" />

            <CheckBox
                android:id="@+id/fountain_select_3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fountain_toilet"
                style="@style/Theme.DiscoverChristchurch.CheckBox"
                app:layout_constraintBottom_toBottomOf="@id/fountain_image_3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fountains_barrier"
                app:layout_constraintTop_toTopOf="@id/fountain_image_3" />

            <TextView
                android:id="@+id/fountain_type_applied_to_all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/common_dialog_horizontal_margin"
                android:layout_marginStart="@dimen/common_dialog_horizontal_margin"
                android:layout_marginTop="@dimen/list_item_margin_large"
                android:text="@string/db_applied_to_all_extra"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/fountains_barrier"
                app:layout_constraintTop_toBottomOf="@id/fountain_image_3"
                style="@style/Theme.DiscoverChristchurch.GravityStart" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
