<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:fitsSystemWindows="true"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:paddingBottom="@dimen/activity_vertical_padding"
        android:paddingEnd="@dimen/activity_horizontal_padding"
        android:paddingStart="@dimen/activity_horizontal_padding"
        android:paddingTop="@dimen/activity_vertical_padding"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/nav_header_logo_padding"
            android:contentDescription="@string/nav_header_desc"
            app:layout_constraintBottom_toBottomOf="@id/check_track_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tracks_and_safety"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <TextView
            android:id="@+id/tracks_and_safety"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_text_margin"
            android:paddingEnd="@dimen/nav_header_link_padding"
            android:paddingStart="@dimen/nav_header_link_padding"
            android:text="@string/navigation_tracks_safety"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintBottom_toTopOf="@id/check_track_status"
            app:layout_constraintStart_toEndOf="@id/app_logo"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/check_track_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/nav_header_drawable_padding"
            android:paddingEnd="@dimen/nav_header_link_padding"
            android:paddingStart="@dimen/nav_header_link_padding"
            android:text="@string/navigation_check_status"
            app:drawableEndCompat="@drawable/ic_baseline_open_in_new_white_24"
            app:layout_constraintStart_toEndOf="@id/app_logo"
            app:layout_constraintTop_toBottomOf="@id/tracks_and_safety"
            style="@style/Theme.DiscoverChristchurch.NavHeaderLink"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/nav_header_title_margin"
            android:paddingEnd="@dimen/nav_header_text_padding"
            android:paddingStart="@dimen/nav_header_text_padding"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toTopOf="@id/powered_by_google"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/check_track_status" />

        <ImageView
            android:id="@+id/powered_by_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/nav_header_text_padding"
            android:paddingStart="@dimen/nav_header_text_padding"
            android:contentDescription="@string/google_descr"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/app_name"
            app:srcCompat="@drawable/powered_by_google"
            tools:ignore="ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>